# Phoenix-Evasion-Research

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Woodlabs_Phoenix_Framework beta.py  docker-compose.yml  phoenix_evasion_research.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  docker.yml  kubernetes-deploy.yml  test.yml
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
src/: __init__.py  __main__.py  phoenix_evasion_research.py
