# pyproject.toml
# Phoenix-Evasion-Research Framework 2025
# Modern Python project configuration (PEP 621 + tools integration)

[project]
name = "phoenix-evasion-research"
version = "2025.11.25"
description = "Educational Windows evasion research framework for defensive cybersecurity"
readme = "README.md"
authors = [
    { name = "Woodlabs Security Research", email = "redmoonstonee@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Natural Language :: Indonesian",
    "Natural Language :: English"
]
keywords = [
    "evasion", "edr-bypass", "defensive-security", "redteam", "research",
    "windows-internals", "syscall", "obfuscation", "anti-analysis", "indonesia"
]

# Dependencies (production)
dependencies = [
    "cryptography>=3.4.8",
    "psutil>=5.9.0",
    "zstandard>=0.18.0",
    "requests>=2.28.1"
]

# Optional dependencies (untuk fitur tambahan)
[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
    "semgrep>=1.88.0"
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0"
]
all = [
    "phoenix-evasion-research[dev]",
    "phoenix-evasion-research[docs]"
]

# Entry points (CLI)
[project.scripts]
phoenix-research = "phoenix_evasion_research:main"

# URLs
[project.urls]
Homepage = "https://github.com/QurolVoV/phoenix-evasion-research"
Repository = "https://github.com/QurolVoV/phoenix-evasion-research"
Issues = "https://github.com/QurolVoV/phoenix-evasion-research/issues"
Donations = "https://saweria.co/WoodLabs"
Documentation = "https://github.com/QurolVoV/phoenix-evasion-research/wiki"

# === Tool Configurations ===

# Black formatter
[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.github
  | \.venv
  | build
  | dist
)/
'''

# Ruff linter & fixer
[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "ANN",      # flake8-annotations
    "S",        # bandit (security)
    "BLE",      # blind-except
    "A",        # built-ins
    "C90",      # mccabe complexity
    "TCH",      # type-checking
    "ARG",      # unused arguments
    "PTH",      # pathlib
    "PL",       # pylint
    "TRY",      # tryceratops
    "FLY",      # f-strings
    "PERF"      # perflint
]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "S101",    # assert digunakan (diizinkan di test)
    "PLR0913"  # too-many-arguments (fleksibel untuk research)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN", "ARG001"]

# mypy
[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# pytest
[tool.pytest.ini_options]
addopts = "-ra -q --cov=phoenix_evasion_research --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage
[tool.coverage.run]
branch = true
source = ["phoenix_evasion_research"]
omit = [
    "tests/*",
    "**/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
fail_under = 90

# Bandit security
[tool.bandit]
exclude_dirs = ["tests", ".github", "docs"]
skips = ["B101"]  # assert di test diizinkan
