# pyproject.toml
# Phoenix-Evasion-Research Framework 2025
# Modern Python project configuration (PEP 621 + tools integration)
# Educational platform for cybersecurity researchers

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-evasion-research"
version = "1.0.0"
description = "Educational Windows evasion research framework for defensive cybersecurity"
readme = "README.md"
authors = [
    { name = "Woodlabs Security Research", email = "redmoonstonee@gmail.com" }
]
maintainers = [
    { name = "Woodlabs Security Research", email = "redmoonstonee@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Natural Language :: Indonesian",
    "Natural Language :: English"
]
keywords = [
    "evasion",
    "edr-bypass",
    "defensive-security",
    "redteam",
    "research",
    "windows-internals",
    "syscall",
    "obfuscation",
    "anti-analysis",
    "cybersecurity",
    "education",
    "indonesia"
]

# Core dependencies (production)
dependencies = [
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "urllib3>=2.0.0",
    "zstandard>=0.21.0",
    "dnspython>=2.4.0",
    "grpcio>=1.59.0"
]

# Optional dependencies groups
[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "bandit[toml]>=1.7.9",
    "safety>=3.2.0",
    "semgrep>=1.88.0"
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0"
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0"
]
all = [
    "phoenix-evasion-research[dev]",
    "phoenix-evasion-research[docs]",
    "phoenix-evasion-research[test]"
]

# Console scripts entry points
[project.scripts]
phoenix-research = "phoenix_evasion_research:main"

# Project URLs
[project.urls]
Homepage = "https://github.com/QurolVoV/phoenix-evasion-research"
Repository = "https://github.com/QurolVoV/phoenix-evasion-research"
Documentation = "https://github.com/QurolVoV/phoenix-evasion-research/blob/main/README.md"
Issues = "https://github.com/QurolVoV/phoenix-evasion-research/issues"
Discussions = "https://github.com/QurolVoV/phoenix-evasion-research/discussions"
Sponsorship = "https://saweria.co/WoodLabs"
Security = "https://github.com/QurolVoV/phoenix-evasion-research/security/policy"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

# Setuptools configuration
[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
phoenix_evasion_research = ["py.typed"]

# ============================================================================
# Code Quality Tools
# ============================================================================

# Black code formatter
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.github
  | \.venv
  | \.env
  | build
  | dist
  | \.eggs
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | __pycache__
  | htmlcov
)/
'''
skip-string-normalization = false
skip-magic-trailing-comma = false

# Ruff linter & fixer
[tool.ruff]
line-length = 100
target-version = "py38"
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "A",      # flake8-builtins
    "C90",    # mccabe
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF"    # perflint
]
extend-ignore = [
    "ANN101",    # missing-type-self
    "ANN102",    # missing-type-cls
    "S101",      # assert allowed in tests
    "PLR0913",   # too-many-arguments (research flexibility)
    "E501"       # line-too-long (handled by black)
]
exclude = [
    ".git",
    ".github",
    ".venv",
    ".env",
    "build",
    "dist",
    ".eggs",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "htmlcov"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN", "ARG001", "ARG002"]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 7
max-branches = 12
max-statements = 50

# MyPy type checking
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
check_untyped_defs = true
no_implicit_optional = true
warn_incomplete_stub = true
show_error_codes = true
strict_equality = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "used-before-def"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "dns.*",
    "grpc.*",
    "zstandard.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=src/phoenix_evasion_research",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=json"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "windows: Windows-specific tests",
    "linux: Linux-specific tests",
    "macos: macOS-specific tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "security: Security-related tests"
]
minversion = "8.0"

# Coverage.py configuration
[tool.coverage.run]
branch = true
source = ["src/phoenix_evasion_research"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/site-packages/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == ['\"]__main__['\"]:",
    "if TYPE_CHECKING:",
    "if sys.platform",
    "class .*\\(.*Protocol\\):"
]
precision = 2
fail_under = 80
skip_covered = false
skip_empty = true
show_missing = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", ".github", "docs", ".venv"]
skips = ["B101", "B601"]
assert_used = { skips = ["test_*"] }

# Pre-commit configuration
[tool.pre-commit]
fail_fast = false

# Isort configuration (used by ruff)
[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = false
skip_glob = ["*/migrations/*"]
known_first_party = ["phoenix_evasion_research"]
known_third_party = [
    "cryptography",
    "psutil",
    "requests",
    "urllib3",
    "dns",
    "grpc"
]

# ============================================================================
# PROJECT METADATA
# ============================================================================

[tool.hatch.version]
path = "src/phoenix_evasion_research/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

# Sphinx documentation configuration (optional)
[tool.sphinx]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx_rtd_theme"
]

# ============================================================================
# DEVELOPMENT TOOLS CONFIGURATION
# ============================================================================

[tool.pdm]
# PDM (Python Development Master) configuration if using PDM
dependencies = [
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "urllib3>=2.0.0"
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0"
]

# Poetry configuration (if needed)
[tool.poetry]
name = "phoenix-evasion-research"
version = "1.0.0"
description = "Educational Windows evasion research framework"
authors = ["Woodlabs Security Research <redmoonstonee@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/QurolVoV/phoenix-evasion-research"
homepage = "https://github.com/QurolVoV/phoenix-evasion-research"
keywords = ["security", "research", "evasion", "education"]

# ============================================================================
# FINAL NOTES
# ============================================================================

# Installation methods:
#
# 1. Development installation with all tools:
#    pip install -e ".[all]"
#
# 2. Production installation:
#    pip install .
#
# 3. Testing:
#    pytest
#
# 4. Code quality checks:
#    black src/
#    ruff check src/
#    mypy src/
#
# 5. Security checks:
#    bandit -r src/
#    safety check
#
# 6. Full pre-commit checks:
#    pre-commit run --all-files
#
# Python version: 3.8+
# License: MIT
# Status: Production Ready ✓
